@@ -1,5 +1,5 @@
 {
-  "count": 123,
+  "count": 124,
   "uniques": 20,
   "views": [
     {
@@ -64,8 +64,8 @@
     },
     {
       "timestamp": "2023-09-01T00:00:00Z",
-      "count": 19,
-      "uniques": 1
+      "count": 20,
+      "uniques": 2
     }
   ]
 }
